--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,181 @@
 html {
     box-sizing: border-box;
+    
   }
 *,
 *::before,
 *::after {
     box-sizing: inherit;
   }
+body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: space-between;
+    font-family: "Roboto", sans-serif;
+    
+}
+  .header, .footer {
+    background-color: #1F2937;
+  }
+
+  .header {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 150px;
+  }
+
+  ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    gap: 16px;
+  }
+
+  .logo {
+    font-size: 24px;
+    color: #F9FAF8;
+  }
+
+  h1 {
+    font-size: 48px;
+    font-weight:bolder;
+    color: #F9FAF8;
+    margin: 0;
+  }
+
+a {
+    text-decoration: none;
+}
+
+a, .hero p {
+    font-size: 18px;
+    color: #E5E7EB
+  }
+
+
+  .hero {
+    display: flex;
+    justify-content: space-between;
+    padding: 80px 150px;
+    gap: 25px;
+  }
+
+h2 {
+    text-align: center;
+    margin: 0;
+    margin-top: 35px;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+  button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 20px;
+    font-weight: bold;
+  }
+
+  p {
+    margin: 0;
+  }
+
+  .hero-image {
+    background-color: gray;
+    width: 50%;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #F9FAF8;
+  }
+
+  .hero-text {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items:flex-start;
+  }
+
+.cards {
+    display: flex;
+    gap: 40px;
+    justify-content: center;
+    margin-top: 35px;
+    margin-bottom: 50px;
+    text-align: center;
+
+}
+
+.img {
+    border: 2px solid #3882F6;
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    gap: 10px;
+    align-items: center;
+    font-size: 16px;
+}
+
+.section2 {
+    background-color: #E5E7EB;
+    padding: 100px 200px;
+}
+
+.italic {
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.bold {
+    font-weight: bold;
+    text-align: end;
+    font-size: 20px;
+}
+
+.call {
+    background-color: #3882F6;
+    color: white;
+    display: flex;
+    border-radius: 5px;
+    padding: 50px 100px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+h3 {
+    margin: 0;
+}
+.section3 {
+    padding: 80px 150px;
+    
+}
+.border-button {
+    border: 1px solid white;
+}
+
+.footer {
+    color:#F9FAF8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 50px 0;
+}
